--- a/views/customer_order_page.ejs
+++ b/views/customer_order_page.ejs
@@ -9,7 +9,7 @@
 <body>
     <!-- Page header with title and Home button -->
     <div class="banner">
-        <h1>Customer Order Page</h1>
+        <h1>Menu</h1>
         <button class="home-button" onclick="goToLogin()">Home</button>
     </div>
 
